<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    tools:context=".AboutActivity"
    tools:ignore="MissingPrefix"
    android:background="@drawable/pixel_activity_bg">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                android:paddingTop="20dp"
                app:cardElevation="@dimen/card_elevation"
                app:cardCornerRadius="@dimen/card_round">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/about_app"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="5dp"
                            android:src="@mipmap/ic_launcher"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:fontFamily="@font/open_sans_reg"
                            android:text="@string/app_name"
                            android:textColor="@color/textPrimaryColor"
                            android:textSize="22sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/about_material"
                        style="@style/about_entry">

                        <ImageView
                            android:src="@drawable/ic_info"
                            style="@style/icon" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                style="@style/about_title_text"
                                android:fontFamily="@font/open_sans_reg"
                                android:text="@string/about_pixel_title"
                                android:textColor="@color/textPrimaryColor" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                android:layout_marginTop="0dp"
                android:paddingTop="20dp"
                app:cardElevation="@dimen/card_elevation"
                app:cardCornerRadius="@dimen/card_round">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/open_sans_reg"
                        android:text="@string/support_development"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/about_github"
                        style="@style/about_entry"
                        android:onClick="repoGithub">

                        <ImageView
                            android:src="@drawable/ic_github"
                            style="@style/icon" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                style="@style/about_title_text"
                                android:fontFamily="@font/open_sans_reg"
                                android:text="@string/about_github_title"
                                android:textColor="@color/textPrimaryColor" />

                            <TextView
                                style="@style/about_subtitle_text"
                                android:fontFamily="@font/open_sans_reg"
                                android:text="@string/about_github_subtitle"
                                android:textColor="@color/textUnderColor" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/about_debug"
                        style="@style/about_entry"
                        android:onClick="bugReport">

                        <ImageView
                            android:src="@drawable/ic_bug"
                            style="@style/icon" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                style="@style/about_title_text"
                                android:fontFamily="@font/open_sans_reg"
                                android:text="@string/about_bug_title"
                                android:textColor="@color/textPrimaryColor" />

                            <TextView
                                style="@style/about_subtitle_text"
                                android:fontFamily="@font/open_sans_reg"
                                android:text="@string/about_bug_subtitle"
                                android:textColor="@color/textUnderColor" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                android:layout_marginTop="0dp"
                android:paddingTop="20dp"
                app:cardElevation="@dimen/card_elevation"
                app:cardCornerRadius="@dimen/card_round">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/open_sans_reg"
                        android:text="@string/about_author"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/about_author"
                        style="@style/about_entry">

                        <ImageView
                            android:src="@drawable/ic_author"
                            style="@style/icon" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                style="@style/about_title_text"
                                android:fontFamily="@font/open_sans_reg"
                                android:text="@string/about_author_title"
                                android:textColor="@color/textPrimaryColor" />

                            <TextView
                                style="@style/about_subtitle_text"
                                android:fontFamily="@font/open_sans_reg"
                                android:text="@string/about_author_subtitle"
                                android:textColor="@color/textUnderColor" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/about_website"
                        style="@style/about_entry"
                        android:onClick="webSite">

                        <ImageView
                            android:src="@drawable/ic_link"
                            style="@style/icon" />

                        <TextView
                            style="@style/about_title_text"
                            android:fontFamily="@font/open_sans_reg"
                            android:text="@string/about_website_title"
                            android:textColor="@color/textPrimaryColor" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                android:layout_marginTop="0dp"
                android:paddingTop="20dp"
                app:cardElevation="@dimen/card_elevation"
                app:cardCornerRadius="@dimen/card_round">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/open_sans_reg"
                        android:text="@string/about_lib_mat"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/about_library1"
                        style="@style/AboutLibrary"
                        android:onClick="library1">

                        <TextView
                            style="@style/about_title_text"
                            android:fontFamily="@font/open_sans_reg"
                            android:text="@string/about_library1_title"
                            android:textColor="@color/textPrimaryColor" />

                        <TextView
                            style="@style/about_subtitle_text"
                            android:fontFamily="@font/open_sans_reg"
                            android:text="@string/about_library1_subtitle"
                            android:textColor="@color/textUnderColor" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/about_library2"
                        style="@style/AboutLibrary"
                        android:onClick="library2">

                        <TextView
                            style="@style/about_title_text"
                            android:fontFamily="@font/open_sans_reg"
                            android:text="@string/about_library2_title"
                            android:textColor="@color/textPrimaryColor" />

                        <TextView
                            style="@style/about_subtitle_text"
                            android:fontFamily="@font/open_sans_reg"
                            android:text="@string/about_library2_subtitle"
                            android:textColor="@color/textUnderColor" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/about_library3"
                        style="@style/AboutLibrary"
                        android:onClick="library3">

                        <TextView
                            style="@style/about_title_text"
                            android:fontFamily="@font/open_sans_reg"
                            android:text="@string/about_library3_title"
                            android:textColor="@color/textPrimaryColor" />

                        <TextView
                            style="@style/about_subtitle_text"
                            android:fontFamily="@font/open_sans_reg"
                            android:text="@string/about_library3_subtitle"
                            android:textColor="@color/textUnderColor" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/about_library4"
                        style="@style/AboutLibrary"
                        android:onClick="library4">

                        <TextView
                            style="@style/about_title_text"
                            android:fontFamily="@font/open_sans_reg"
                            android:text="@string/about_library4_title"
                            android:textColor="@color/textPrimaryColor" />

                        <TextView
                            style="@style/about_subtitle_text"
                            android:fontFamily="@font/open_sans_reg"
                            android:text="@string/about_library4_subtitle"
                            android:textColor="@color/textUnderColor" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/about_library5"
                        style="@style/AboutLibrary"
                        android:onClick="library5">

                        <TextView
                            style="@style/about_title_text"
                            android:fontFamily="@font/open_sans_reg"
                            android:text="@string/about_library5_title"
                            android:textColor="@color/textPrimaryColor" />

                        <TextView
                            style="@style/about_subtitle_text"
                            android:fontFamily="@font/open_sans_reg"
                            android:text="@string/about_library5_subtitle"
                            android:textColor="@color/textUnderColor" />

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>