<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/pixel_activity_bg"
    tools:context=".PixelActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:src="@drawable/ic_homepage"
        android:contentDescription="@string/welcome_title"
        android:layout_margin="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="0dp"
        android:fontFamily="@font/open_sans_reg"
        android:text="@string/welcome_title"
        android:textColor="@color/textPrimaryColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:fontFamily="@font/open_sans_reg"
        android:gravity="center"
        android:text="@string/welcome_description"
        android:textColor="@color/textUnderColor"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="@color/colorDivider"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_margin="20dp" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:fontFamily="@font/open_sans_reg"
        android:onClick="supportChat"
        android:text="@string/support_chat"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorWhite"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="@dimen/button_round"
        app:icon="@drawable/ic_chat"
        app:iconTint="@color/colorWhite"
        app:strokeColor="@color/colorPrimary"
        app:strokeWidth="@dimen/button_stroke"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:fontFamily="@font/open_sans_reg"
        android:text="@string/hide"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorWhite"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="@dimen/button_round"
        app:icon="@drawable/ic_hide"
        app:iconTint="@color/colorWhite"
        app:strokeColor="@color/colorPrimary"
        app:strokeWidth="@dimen/button_stroke"
        android:onClick="hideAppIcon"/>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            style="@style/Widget.MaterialComponents.BottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:theme="@style/BottomMenuColor"
            app:fabCradleRoundedCornerRadius="16dp"
            app:backgroundTint="@color/colorBottom">

        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/open_sub"
            android:fontFamily="@font/open_sans_reg"
            android:text="@string/open_sub"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"
            app:backgroundTint="@color/colorPrimary"
            app:fabSize="normal"
            app:icon="@drawable/ic_fab"
            app:iconTint="@color/colorWhite"
            app:layout_anchor="@+id/bottomAppBar"
            app:strokeColor="@color/colorAccent"
            app:strokeWidth="@dimen/fab_stroke" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
